--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-redux": "^8.1.2",
+    "@reduxjs/toolkit": "^2.1.0"
   },
- "scripts": {
-  "start": "node node_modules/react-scripts/bin/react-scripts.js start",
-  "build": "node --openssl-legacy-provider node_modules/react-scripts/bin/react-scripts.js build",
-  "test": "node node_modules/react-scripts/bin/react-scripts.js test",
-  "eject": "node node_modules/react-scripts/bin/react-scripts.js eject"
-
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "CI=false react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "browserslist": {
     "production": [
