--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,17 @@
 [build]
-  publish = "."
+  base = "frontend"
+  publish = "frontend/build"
+  command = "npm run build"
+
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
+[build.environment]
+  NODE_VERSION = "22"
